--- a/css/style.css
+++ b/css/style.css
@@ -78,21 +78,17 @@ animation-duration:1s;
 }
 
 button {
-    background-color: #f5f5f5;
+    width: 40%;
+    height: 20%;
+    padding: 2vh 2vw;
+    margin-top: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vh;
+    font-weight: bold;
+    color: #003da5;
+    background-color: transparent;
     border: none;
     border-radius: 4vh;
     outline: none;
-    color: #003da5;
-    padding: 2vh 2vw;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5vh;
-    font-size: 1.5vw;
-    margin-top: 60%;
-    margin-left: 2%;
-    z-index: 200;
     position:absolute;
-    animation-duration: 800ms;
-    animation-name: blink;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;  
 }
