--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,108 @@ animation-duration:1s;
 }
 
 button {
+    width: 60%;
+    height: 20%;
+    padding: 1vh 2vw;
+    margin-top: 30%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vh;
+    font-weight: bold;
+    color: #003da5;
+    background-color: transparent;
+    border: none;
+    border-radius: 4vh;
+    outline: none;
+    position:absolute;
+}
+
+
+
+
+
+
+
+
+
+
+/* --- media queries --- */
+
+/* --- LAPTOP --- */
+
+@media (max-width: 100em){
+    body{
+        width: 100%;
+    max-width: 2880px;
+    background-image: url(../images/ball.png);
+    background-size: 100%, 100%;
+    background-repeat: no-repeat;
+	letter-spacing: 0.05em;
+	font: 1em "Avenir";
+    }
+    
+/* ---- LAYOUT-----*/
+
+.container {
+	position: fixed !important;
+	position: absolute;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	display: flex;
+	display: -webkit-flex;
+	justify-content: center;
+	align-items: center;
+	}
+	
+.card {
+	padding: 10px;
+	width: 440px;
+	height: 280px;
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	-webkit-perspective: 1000; /* NEW */
+	}
+
+	
+p {
+    font-size: 1.25em;
+    color: #003da5;
+	padding: 10px;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+    -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 7s; /* Firefox < 16 */
+        -ms-animation: fadein 7s; /* Internet Explorer */
+         -o-animation: fadein 7s; /* Opera < 12.1 */
+            animation: fadein 7s;
+    }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+.fade-in {
+opacity:0;  
+-webkit-animation:fadeIn ease-in 1; 
+-moz-animation:fadeIn ease-in 1;
+animation:fadeIn ease-in 1;
+-webkit-animation-fill-mode:forwards; 
+-moz-animation-fill-mode:forwards;
+animation-fill-mode:forwards;
+-webkit-animation-duration:1s;
+-moz-animation-duration:1s;
+animation-duration:1s;
+}
+
+button {
     width: 40%;
     height: 20%;
     padding: 2vh 2vw;
@@ -91,4 +193,206 @@ button {
     border-radius: 4vh;
     outline: none;
     position:absolute;
+}
+}
+
+
+
+
+
+
+
+
+
+
+/* ---- TABLET-----*/
+
+@media (max-width: 50em){
+    
+    body{
+        max-width: 1010px;
+    background-image: url(../images/ball_tablet.png);
+    background-size: 100%, 100% ;
+    background-repeat: no-repeat;
+	letter-spacing: 0.05em;
+	font: 1em "Avenir";
+    }
+    
+    /* ---- LAYOUT-----*/
+
+.container {
+	position: fixed !important;
+	position: absolute;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	display: flex;
+	display: -webkit-flex;
+	justify-content: center;
+	align-items: center;
+	}
+	
+.card {
+	padding: 10px;
+	width: 440px;
+	height: 280px;
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	-webkit-perspective: 1000; /* NEW */
+	}
+
+	
+p {
+    font-size: 1.125em;
+    color: #003da5;
+	padding: 10px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 7s; /* Firefox < 16 */
+        -ms-animation: fadein 7s; /* Internet Explorer */
+         -o-animation: fadein 7s; /* Opera < 12.1 */
+            animation: fadein 7s;
+    }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+.fade-in {
+opacity:0;  
+-webkit-animation:fadeIn ease-in 1; 
+-moz-animation:fadeIn ease-in 1;
+animation:fadeIn ease-in 1;
+-webkit-animation-fill-mode:forwards; 
+-moz-animation-fill-mode:forwards;
+animation-fill-mode:forwards;
+-webkit-animation-duration:1s;
+-moz-animation-duration:1s;
+animation-duration:1s;
+}
+
+button {
+    width: 40%;
+    height: 20%;
+    padding: 2vh 2vw;
+    margin-top: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vh;
+    font-weight: bold;
+    color: #003da5;
+    background-color: transparent;
+    border: none;
+    border-radius: 4vh;
+    outline: none;
+    position:absolute;
+}
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    /* ---- SMARTPHONE-----*/
+
+@media (max-width: 35em){
+    
+    body{
+        max-width: 551px;
+    background-image: url(../images/ball_smartphone.png);
+    background-size: 100% ;
+    background-repeat: no-repeat;
+	letter-spacing: 0.05em;
+	font: 1em "Avenir";
+    }
+    
+    /* ---- LAYOUT-----*/
+
+.container {
+	position: fixed !important;
+	position: absolute;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	display: flex;
+	display: -webkit-flex;
+	justify-content: center;
+	align-items: center;
+	}
+	
+.card {
+	padding: 10px;
+	width: 440px;
+	height: 280px;
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	-webkit-perspective: 1000; /* NEW */
+	}
+
+	
+p {
+    font-size: 1.125em;
+    color: #003da5;
+	padding: 10px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 7s; /* Firefox < 16 */
+        -ms-animation: fadein 7s; /* Internet Explorer */
+         -o-animation: fadein 7s; /* Opera < 12.1 */
+            animation: fadein 7s;
+    }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+.fade-in {
+opacity:0;  
+-webkit-animation:fadeIn ease-in 1; 
+-moz-animation:fadeIn ease-in 1;
+animation:fadeIn ease-in 1;
+-webkit-animation-fill-mode:forwards; 
+-moz-animation-fill-mode:forwards;
+animation-fill-mode:forwards;
+-webkit-animation-duration:1s;
+-moz-animation-duration:1s;
+animation-duration:1s;
+}
+
+button {
+    width: 40%;
+    height: 20%;
+    padding: 2vh 2vw;
+    margin-top: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vh;
+    font-weight: bold;
+    color: #003da5;
+    background-color: transparent;
+    border: none;
+    border-radius: 4vh;
+    outline: none;
+    position:absolute;
+}
 }
