--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,6 @@
 }
 
 body {
-    background-image: url(../images/ball.png);
-    background-size: 100% ;
-    background-repeat: no-repeat;
 	letter-spacing: 0.05em;
 	font: 1em "Avenir";
 	}
@@ -18,7 +15,11 @@ body {
 /* ---- LAYOUT-----*/
 
 .container {
-	position: fixed !important;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/ball.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 	position: absolute;
 	top:0;
 	right:0;
@@ -47,6 +48,7 @@ p {
     font-size: 1.25em;
     color: #003da5;
 	padding: 10px;
+    margin-top: -10%;
     margin-left: 7.5%;
     margin-right: 7.5%;
     -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
@@ -110,9 +112,6 @@ button {
     body{
         width: 100%;
     max-width: 2880px;
-    background-image: url(../images/ball.png);
-    background-size: 100%, 100%;
-    background-repeat: no-repeat;
 	letter-spacing: 0.05em;
 	font: 1em "Avenir";
     }
@@ -120,7 +119,11 @@ button {
 /* ---- LAYOUT-----*/
 
 .container {
-	position: fixed !important;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/ball.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 	position: absolute;
 	top:0;
 	right:0;
@@ -146,9 +149,10 @@ button {
 
 	
 p {
-    font-size: 1.25em;
+    font-size: 1.5vw;
     color: #003da5;
 	padding: 10px;
+    margin-top: -10%;
     margin-left: 7.5%;
     margin-right: 7.5%;
     -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
@@ -183,7 +187,7 @@ button {
     width: 40%;
     height: 20%;
     padding: 2vh 2vw;
-    margin-top: 20%;
+    margin-top: 15%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2vh;
     font-weight: bold;
@@ -211,9 +215,6 @@ button {
     
     body{
         max-width: 1010px;
-    background-image: url(../images/ball_tablet.png);
-    background-size: 100%, 100% ;
-    background-repeat: no-repeat;
 	letter-spacing: 0.05em;
 	font: 1em "Avenir";
     }
@@ -221,7 +222,11 @@ button {
     /* ---- LAYOUT-----*/
 
 .container {
-	position: fixed !important;
+    width: 100%;
+    height: 100vh;
+        background-image: url(../images/ball_tablet.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 	position: absolute;
 	top:0;
 	right:0;
@@ -247,9 +252,10 @@ button {
 
 	
 p {
-    font-size: 1.125em;
+    font-size: 2vw;
     color: #003da5;
 	padding: 10px;
+    margin-top: 5%;
     margin-left: 12.5%;
     margin-right: 12.5%;
     -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
@@ -309,11 +315,9 @@ button {
 
 @media (max-width: 35em){
     
-    body{
-        max-width: 551px;
-    background-image: url(../images/ball_smartphone.png);
-    background-size: 100% ;
-    background-repeat: no-repeat;
+body{
+    max-width: 551px;
+
 	letter-spacing: 0.05em;
 	font: 1em "Avenir";
     }
@@ -321,7 +325,11 @@ button {
     /* ---- LAYOUT-----*/
 
 .container {
-	position: fixed !important;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/ball_smartphone.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 	position: absolute;
 	top:0;
 	right:0;
@@ -342,17 +350,19 @@ button {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+    position: relative;
 	-webkit-perspective: 1000; /* NEW */
 	}
 
 	
 p {
-    font-size: 1em;
+    font-size: 2.75vw;
     color: #003da5;
 	padding: 10px;
-    margin-top: -45%;
+    margin-top: 10%;
     margin-left: 20%;
     margin-right: 20%;
+    position: relative;
     -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 7s; /* Firefox < 16 */
         -ms-animation: fadein 7s; /* Internet Explorer */
@@ -385,7 +395,7 @@ button {
     width: 40%;
     height: 20%;
     padding: 2vh 2vw;
-    margin-top: -10%;
+    margin-top: 25%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2vh;
     font-weight: bold;
